# cppHighloadFrameworkModel

./: .travis.yml  CMakeLists.txt  README.md  User.h  main.cpp
cmake/: UnitTests.cmake
gmock/: CMakeLibs.txt  Makefile  config.status  libtool
gmock/gtest/: Makefile  config.status  libtool
gmock/make/: gmock_test
gmock/scripts/: gmock-config
include/: Logger.h  SystemDefines.h
libs/: CMakeLists.txt  SwipeStorage.cpp  SwipeStorage.h
libs/test/: CMakeLists.txt  SwipeStorageTest.cpp
models/: CMakeLists.txt  SwipeEvent.cpp  User.cpp  User.h
models/test/: CMakeLists.txt  UserTest.cpp  coverage.sh
src/: main.cpp
storages/: CMakeLibs.cmake  CMakeLists.txt  Contacts.cpp  ContactsStorage.cpp  ContactsStorage.h  EventStorage.cpp  EventStorage.h  PostStorage.cpp  PostStorage.h  SwipeStorage.cpp  SwipeStorage.h  UserStorage.cpp  UserStorage.h
storages/test/: CMakeLists.txt  ContactsStorageTest.cpp  EventStorageTest.cpp  PostStorageTest.cpp  SwipeStorageTest.cpp  UserStorageTest.cpp
swipe-server/: CMakeLists.txt
swipe-server/include/: Event.h  Subscriptions.h  SwipeDefines.h  SwipeEvent.h  SwipeImpl.h  SwipeStorage.h
swipe-server/src/: Event.cpp  Subscriptions.cpp  SwipeEvent.cpp  SwipeImpl.cpp  main.cpp
swipe-server/test/: CMakeLists.txt  SwipeServerTest.cpp
